--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@ header-img: "img/about-bg.jpeg"
     <br>呢喃着只有我自己能懂的呓语.<br>
     <br>正如同在这个深夜3:27的时候在一大堆html标签中敲下这篇文字,一种很舒服的孤独感笼罩着我.耳机中流淌着<a href="http://music.163.com/#/song?id=30512400">《Love Will Set You Free》</a>
     主唱沙哑的声音,一次次带过我的耳蜗.抬头瞥见旁边被我当作拓展屏幕的手机,"About Me"的header title闯进来.关于我啊,那就说说关于我的事儿吧.<br>
-    <br>在旁人眼中,也许我是个特别活喔泼的人儿,总是插科打诨,每天都是疯疯癫癫的,人缘呢,还不错,总是尽力去交各种各样的朋友.可是,总有一些时候,听见心中那个孤独的小孩在喊"让我一个人!",然后整个人就会陷入一种沉默的模式.大大咧咧的社交男孩,孤独的怪小孩,都是我.人嘛,哪有那么容易,那些星座划分的12种人格?本来就是止增笑耳<br>
+    <br>在旁人眼中,也许我是个特别活泼的人儿,总是插科打诨,每天都是疯疯癫癫的,人缘呢,还不错,总是尽力去交各种各样的朋友.可是,总有一些时候,听见心中那个孤独的小孩在喊"让我一个人!",然后整个人就会陷入一种沉默的模式.大大咧咧的社交男孩,孤独的怪小孩,都是我.人嘛,哪有那么容易,那些星座划分的12种人格?本来就是止增笑耳<br>
     <br>兴趣广泛,自来熟.总是能和各种各样的人,聊各种各样的话题.日剧,日漫,美剧,足球,篮球,天南海北.但是在网上我却下意识得,不喜欢聊自己,这篇呓语旁就有好几个SNS的图标,我却并没有留下几个脚印.一是不愿分享,二是上大学后懒于分享,唯一写了一点点东西的,可能就是<a href="http://www.douban.com/people/Bern3rsH/">豆瓣Bern3rsH</a>吧,刚谈恋爱,特别感性的时候.<br>
     <br>爱音乐,不分流派,只为耳朵服务;爱电影,不分品种,好看就看;爱动漫,不分题材,少女猎奇;爱科技新闻,各大巨头;爱科幻,大刘特德姜;爱与设计师交朋友,男男女女.装逼怡情,自诩半文艺青年.轻微中二病有时候做事不够潇洒.对一切有逼格的东西不能自拔.Apple的理性粉<br>
     <br>回顾自己的大学生活,这点点滴滴.不知不觉,就大三了.在长沙的中南大学学计科(计划生育与科学繁殖),然而大一死不用功,从江苏高考中冲出了牢笼,疯玩一年,后大二有所醒悟,补些基础.在大二下15年6月份接触前端,结合技术与美,甚是喜爱,自学没几天被学长拉去做外包.然后在外包那里呆到9月份,从完全不懂得小白起期间走过无数的坑,刚写js一个语法不会,需要什么,全靠google.做的东西在个人github上有,至今自觉水平还差的很远.<br>
