--- a/tags.html
+++ b/tags.html
@@ -2,7 +2,7 @@
 title: Tags
 layout: default
 description: Send Cerebra Only
-header-img: "img/tag-bg.jpg"
+header-img: "img/tag-bg.jpeg"
 ---
 
 <!-- Page Header -->
